Se crea una tabla de rol y una de la relacion rol_user, también se añade la comprobación de que el user no exista en base de datos, si existe lanza una excepción